; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_dstr_cat_dstr.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_dstr_cat_dstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dstr_cat_dstr(%struct.dstr* %0, %struct.dstr* %1) #0 {
  %3 = alloca %struct.dstr*, align 8
  %4 = alloca %struct.dstr*, align 8
  %5 = alloca i64, align 8
  store %struct.dstr* %0, %struct.dstr** %3, align 8
  store %struct.dstr* %1, %struct.dstr** %4, align 8
  %6 = load %struct.dstr*, %struct.dstr** %4, align 8
  %7 = getelementptr inbounds %struct.dstr, %struct.dstr* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %42

11:                                               ; preds = %2
  %12 = load %struct.dstr*, %struct.dstr** %3, align 8
  %13 = getelementptr inbounds %struct.dstr, %struct.dstr* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.dstr*, %struct.dstr** %4, align 8
  %16 = getelementptr inbounds %struct.dstr, %struct.dstr* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add i64 %14, %17
  store i64 %18, i64* %5, align 8
  %19 = load %struct.dstr*, %struct.dstr** %3, align 8
  %20 = load i64, i64* %5, align 8
  %21 = add i64 %20, 1
  %22 = call i32 @dstr_ensure_capacity(%struct.dstr* %19, i64 %21)
  %23 = load %struct.dstr*, %struct.dstr** %3, align 8
  %24 = getelementptr inbounds %struct.dstr, %struct.dstr* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.dstr*, %struct.dstr** %3, align 8
  %27 = getelementptr inbounds %struct.dstr, %struct.dstr* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = add i64 %25, %28
  %30 = load %struct.dstr*, %struct.dstr** %4, align 8
  %31 = getelementptr inbounds %struct.dstr, %struct.dstr* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.dstr*, %struct.dstr** %4, align 8
  %34 = getelementptr inbounds %struct.dstr, %struct.dstr* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add i64 %35, 1
  %37 = trunc i64 %36 to i32
  %38 = call i32 @memcpy(i64 %29, i64 %32, i32 %37)
  %39 = load i64, i64* %5, align 8
  %40 = load %struct.dstr*, %struct.dstr** %3, align 8
  %41 = getelementptr inbounds %struct.dstr, %struct.dstr* %40, i32 0, i32 0
  store i64 %39, i64* %41, align 8
  br label %42

42:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @dstr_ensure_capacity(%struct.dstr*, i64) #1

declare dso_local i32 @memcpy(i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
